[FIX] web: calendar, adjust contrast of hovered fc-day-number
task-3754159
Part of task-3575827

closes odoo/odoo#168332

X-original-commit: bda4b22a06092c72f6acaeb170f823e91fdd90df

--- a/addons/web/static/src/views/calendar/calendar_renderer.scss
+++ b/addons/web/static/src/views/calendar/calendar_renderer.scss
@@ -497,8 +497,10 @@
                     }
 
                     &:hover > .fc-day-number {
-                        --o-cw-color: #{$o-white};
-                        --o-cw-bg: #{mix($o-white, $o-action, 50%)};
+                        $-bg: mix($o-view-background-color, $o-action, 75%);
+
+                        --o-cw-color: #{color-contrast($-bg)};
+                        --o-cw-bg: #{$-bg};
 
                         &:before {
                             display: block;
